--- a/_posts/2024-05-12-test.md
+++ b/_posts/2024-05-12-test.md
@@ -4,7 +4,13 @@ search: false
 categories: 
   - Jekyll
 last_modified_at: 2018-02-19T08:06:00-05:00
+
+toc: true
+toc_label: Test of Contents
+toc_icon: "cog"
 ---
+
+
 
 This post should not appear in the search index because it has the following YAML Front Matter:
 
